--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/hospital_management_system
 spring.datasource.username=root
 spring.datasource.password=@32178#M$01*Mahesh
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.EJB3NamingStrategy
+jwt.secret=S3VmWmRfNGd6bVRYajVscUt3T2VWZHR5ZzJqYVNUU3U=
+
 
 spring.jpa.show-sql=true
